--- a/app/styles/components/classroom_lessons/_congratulations_modal.scss
+++ b/app/styles/components/classroom_lessons/_congratulations_modal.scss
@@ -1,11 +1,14 @@
 .congratulations-modal-container {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background-color: #969696;
+  .congratulations-modal-background {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    background-color: #969696;
+    opacity: 0.9;
+  }
   .congratulations-modal {
     position: fixed;
     top: 50%;
@@ -19,6 +22,7 @@
     align-items: center;
     text-align: center;
     padding: 55px 50px 50px;
+    z-index: 100;
     .exit {
       right: 12px;
       top: 12px;
