Declare Adelle Correctly

--- a/app/styles/components/_language-choices.scss
+++ b/app/styles/components/_language-choices.scss
@@ -91,7 +91,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: AdelleSans;
+  font-family: adelle-sans;
   font-size: 24px;
   line-height: 1.29;
   color: #000000;
