--- a/app/styles/components/_student-question.scss
+++ b/app/styles/components/_student-question.scss
@@ -29,7 +29,7 @@
 }
 
 .li-number {
-  font-family: AdelleSans;
+  font-family: adelle-sans;
   font-size: 30px;
   color: #00c2a2;
   font-weight: 600;
