--- a/app/styles/variables.sass
+++ b/app/styles/variables.sass
@@ -24,7 +24,7 @@ $primary: $green
 
 // Typography
 
-$family-sans-serif: "Adelle Sans", "Helvetica", "Arial", sans-serif
+$family-sans-serif: "adelle-sans", "Helvetica", "Arial", sans-serif
 $family-monospace: "Roboto-mono", "Monaco", "Inconsolata", monospace
 
 $size-1: 48px
