--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -77,5 +77,5 @@ $header-font: "Comfortaa", cursive;
 $baseFontFamily: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 $headingsFontFamily: $header-font;
 $headingsFontWeight: normal;
-$family-sans-serif: "Adelle Sans", "Helvetica", "Arial", sans-serif;
+$family-sans-serif: "adelle-sans", "Helvetica", "Arial", sans-serif;
 $family-monospace: "Roboto-mono", "Monaco", "Inconsolata", monospace;
