--- a/app/views/application/_notification_bar.html.erb
+++ b/app/views/application/_notification_bar.html.erb
@@ -1,7 +1,7 @@
 <% if !current_user || current_user.role == "teacher" %>
 <div class="notification-bar">
   <p>
-    Check out our brand new <a href="/tools/diagnostic">Diagnostic</a> and <a href="/tools/connect">Sentence Combining</a> tools!
+    We've launched <a href="/tools/lessons">Quill Lessons</a> to support group writing! 🎉
   </p>
 </div>
 <% end %>
