--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <% flash.each do |key, value| %>
       <%= content_tag(:div, "<p>#{value}</p><i class='fa fa-times-circle' aria-hidden='true'></i>".html_safe, {class: "flash #{key}", onClick: "$(this).slideUp(300)"}) %>
     <% end %>
-    <!-- <%= render partial: 'application/notification_bar' %> -->
+    <%= render partial: 'application/notification_bar' %>
     <div id='application_nav_bar'>
       <%= render partial: 'header', media: 'all', 'data-turbolinks-track' => true %>
     </div>
