fix styling bugs

--- a/app/styles/components/classroom_lessons/_flagged_student_list.scss
+++ b/app/styles/components/classroom_lessons/_flagged_student_list.scss
@@ -59,6 +59,7 @@
   .assign-option-row {
     padding-left: 30px;
     padding-right: 30px;
+    cursor: pointer;
     // max-width: 730px;
     min-height: 76px;
     justify-content: space-between;
