--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -28,13 +28,13 @@
     width: 460px;
     min-width: 460px;
     max-width: 460px;
-    height: 100%;
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
     padding: 5 15 20;
     overflow-y: scroll;
     border-right: solid 1px #e9e9e9;
+    margin-bottom: 60px;
     .slide-preview {
       background-color: white;
       height: 250px;
