--- a/app/styles/components/classroom_lessons/_projector_modal.scss
+++ b/app/styles/components/classroom_lessons/_projector_modal.scss
@@ -1,11 +1,14 @@
 .projector-modal-container {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background-color: #969696;
+  .projector-modal-background {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    background-color: #969696;
+    opacity: 0.9;
+  }
   .projector-modal {
     width: 551px;
     height: 555px;
@@ -19,7 +22,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 55px 45px;
+    padding: 47px 45px;
+    z-index: 100;
     .exit {
       right: 12px;
       top: 12px;
