Add bug report form

--- a/app/views/profiles/staff.html.slim
+++ b/app/views/profiles/staff.html.slim
@@ -13,7 +13,7 @@
 
     article.simple-rounded-box: table.table
       thead: th Project Board
-      tr: td= link_to 'Github Project Baord', 'https://github.com/orgs/empirical-org/projects/1'
+      tr: td= link_to 'Github Project Board', 'https://github.com/orgs/empirical-org/projects/1'
 
     article.simple-rounded-box: table.table
       thead: th Activity Management System
@@ -38,3 +38,7 @@
       tr: td= link_to "External: Daily Usage", "https://quill.geckoboard.com/edit/dashboards/138770"
       tr: td= link_to "Internal: Tracking", "https://quill.geckoboard.com/edit/dashboards/170032"
       tr: td= link_to "Memory/Response Time Stats", "https://log2viz.herokuapp.com/app/empirical-grammar"
+
+    article.simple-rounded-box: table.table
+      thead: th Bug Reporting
+      tr: td= link_to 'Bug Report Form', 'https://docs.google.com/document/d/1nBPI2qXQp_uOZamqctwi8UQoO4pBzWcanfD4dCu4RQ0/copy', target: "_blank"
