--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -4,6 +4,18 @@
 		border-bottom: 1px solid rgb(206,206,206);
 	}
 
+	.icons-wrapper.icon-legend {
+		.icons {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			.icon {
+				display: flex;
+				align-items: center;
+			}
+		}
+	}
+
 	.dropdown-menu {
 		margin-left: 15px;
 	}
