--- a/app/assets/stylesheets/pages/my_account.scss
+++ b/app/assets/stylesheets/pages/my_account.scss
@@ -3,14 +3,24 @@
     margin: 30px 0px;
   }
   .row {
-    margin: 10px 0px;
+    display: flex;
+    margin: 20px 0px;
+    align-items: center;
   }
   .form-label {
     width: 150px;
-    display: inline-block;
   }
   .form-input {
-    display: inline-block;
+    input {
+      width: 300px;
+      height: 40px;
+      border-radius: 3px;
+      background-color: #ffffff;
+      border: solid 1px #e9e9e9;
+    }
+  }
+  .error {
+
   }
   // a {
   //   cursor: pointer;
