Scaffolding for new admin schools pages

--- a/app/views/profiles/staff.html.slim
+++ b/app/views/profiles/staff.html.slim
@@ -4,6 +4,7 @@
       thead: th Staff Console
       tr: td= link_to 'Rails Admin - Master CMS (Beta)', '/staff/user'
       tr: td= link_to 'User Manager', cms_users_path
+      tr: td= link_to 'School Manager', cms_schools_path
       tr: td= link_to 'Admin Accounts Editor (Add Teachers to Admin)', cms_admin_accounts_path
       tr: td= link_to 'Admins Editor (Create Root Admin)', cms_admins_path
 
