--- a/app/assets/stylesheets/pages/my_account.scss
+++ b/app/assets/stylesheets/pages/my_account.scss
@@ -7,6 +7,9 @@
     display: flex;
     margin: 20px 0px;
     align-items: center;
+    &.email-row {
+      position: relative;
+    }
     .form-button {
       margin-left: 25px;
     }
@@ -21,6 +24,10 @@
       border-radius: 3px;
       background-color: #ffffff;
       border: solid 1px #e9e9e9;
+      &.inactive {
+        background-color: #F7F5F5;
+        border: dashed 1px #969696;
+      }
     }
   }
   .error {
@@ -41,8 +48,39 @@
     width: 137px;
   }
   .save-button {
-    margin-top: 40px;
     border-radius: 3px;
+  }
+
+  .form {
+    margin-bottom: 40px;
+  }
+
+  .google-classroom-warning {
+    padding: 14px 17px;
+    position: absolute;
+    top: 0px;
+    left: 476px;
+    width: 400px;
+    height: 100px;
+    background-color: #fcf2e1;
+    border: solid 1px rgba(245, 186, 91, 0.41);
+    display: flex;
+    i {
+      margin-top: 3px;
+      margin-right: 5px;
+      color: #ea9a1a;
+      font-size: 21px;
+    }
+    a {
+      color: #027360;
+      text-decoration: underline;
+      font-size: 16px;
+    }
+  }
+
+  .error {
+    margin-left: 10px;
+    color: $quillred;
   }
 
   .delete-account {
