redo reset password page

--- a/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
+++ b/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
@@ -291,3 +291,48 @@
       text-align: left;
     }
 }
+
+.reset-password {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 460px;
+  form {
+    width: 100%;
+    margin-top: 30px;
+    label {
+      font-weight: normal;
+      font-size: 14px;
+    }
+    button {
+      width: 100%;
+      margin-bottom: 0px;
+    }
+  }
+  .sign-up-link {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
+  .student-info-box {
+    margin-top: 41px;
+    padding: 20px 15px;
+    border-radius: 1px;
+    background-color: #fcf2e1;
+    h4 {
+      margin-top: 0px;
+      font-size: 15px;
+      font-weight: 600;
+      margin-bottom: 15px;
+    }
+    p {
+      margin-bottom: 15px;
+      &.step {
+        margin-bottom: 5px;
+        span {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
