--- a/app/views/cms/schools/index.html.erb
+++ b/app/views/cms/schools/index.html.erb
@@ -5,18 +5,45 @@
     <%= link_to 'Add New School', new_cms_school_path, class: 'btn button-green'  %>
     <br /><br />
     <%= form_tag search_cms_schools_path, class: 'searchable' do %>
-      <% @search_attributes.each do |attribute| %>
+      <table>
+        <% @search_attributes.each do |attribute| %>
+          <tr>
+            <td>
+              <%= label_tag attribute, "#{attribute.gsub('_', ' ').titleize} Contains" %>
+            </td>
+            <td>
+              <%= text_field_tag attribute, @school_search_query[attribute] ? @school_search_query[attribute] : '' %>
+            </td>
+          </tr>
+        <% end %>
 
-        <%= label_tag attribute, "#{attribute.gsub('_', ' ').titleize} Contains" %>
-        <%= text_field_tag attribute, @school_search_query[attribute] ? @school_search_query[attribute] : '' %>
+        <tr>
+          <td>
+            <%= label_tag 'premium_status', 'Premium Status' %>
+          </td>
+          <td>
+            <%= select_tag 'premium_status', options_for_select(@school_premium_types, @school_search_query['premium_status'] ? @school_search_query['premium_status'] : []), multiple: true %>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <%= label_tag 'search_schools_with_zero_teachers', 'Include Schools with 0 Teachers' %>
+          </td>
+          <td>
+            <%= check_box_tag 'search_schools_with_zero_teachers', @school_search_query['premium_status'] %>
+          </td>
+        </tr>
+        <tr><td colspan="2">
+          <%= submit_tag 'Search' %>
+        </td></tr>
       <% end %>
-      <%= select_tag 'premium_status', options_for_select(@school_premium_types, @school_search_query['premium_status'] ? @school_search_query['premium_status'] : []), multiple: true %>
-      <%= submit_tag 'Search' %>
-    <% end %>
+    </table>
 
     <table class='table table-stripe table-hover-row cms-user-index-table'>
       <thead>
         <tr>
+          <% # THIS ORDER MATCHES ORDER OF ATTRIBUTES IN SCHOOLS_CONTROLLER. %>
           <td>School</td>
           <td>District</td>
           <td>City</td>
@@ -28,6 +55,14 @@
           <td>Admins</td>
           <td>Edit</td>
         </tr>
+        <% # TODO: pop off last element of array, turn into edit link. %>
+        <% @school_search_query_results.each do |school| %>
+          <% school.values.each do |value| %>
+            <td>
+              <%= value %>
+            </td>
+          <% end %>
+        <% end %>
       </thead>
       <tbody>
 
