--- a/app/views/pages/impact.html
+++ b/app/views/pages/impact.html
@@ -4,7 +4,22 @@
 
 <div class="white-background">
   <div class="container pages-container white-page"
-    <h3>Teacher Perspectives</h3>
+       
+      <h4><b>Kim Hinderlie, Elma Elementary School</b></h4>
+      <i>124 students; 392 activities completed</i>
+
+      <p>The kids LOVED seeing their responses come up live as we went through the lesson. Eighth-grade students were literally begging me to project their answers or asking me to allow them to resubmit an answer because they'd just gotten a better idea from another students example. An excited class learning grammar from each other, now that's a good day in ELA class! I can't wait till Friday to do it again.</p>
+  
+      <h4><b>Britney Wilson, Morgan Co. R I Middle</b></h4>
+      <i>113 students; 1094 activities completed</i>
+
+      <p>The kids are really enjoying the new lessons! As far as prepping for lessons, I start with the diagnostic first thing. I am anxious to see where the kids start at the beginning of the year and where the finish by the end of the year. We started with the most basic lessons, and are working our way up. One thing that the students love is when we put the wrong answers up on the board. They see that they aren’t the only ones who struggle, and it helps them build more confidence. We share a few laughs and then go on to find the correct answer.Once lessons are complete, we either move on or practice individually. If the students did really well and seem to understand the topic, we’ll go on. However, if they struggled with the information, we’ll spend an extra day working on the material.</p>
+  
+      <h4><b>Laura Marshall, Caswell Elementary School</b></h4>
+      <i>23 students; 277 activities completed</i>
+
+      <p>Quill has been a wonderful tool for my third graders, many of whom are second language learners. We especially love the immediate feedback provided after each practice; it has definitely made us pay closer attention to detail. Quill has greatly contributed to our growth mindsets this year!</p>
+       
       <h4>Gwen Beck, Covenant Christian School</h4>
       <i>42 students; 601 activities completed</i>
 
