--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -1,8 +1,8 @@
 <div class='container'>
   <article class='simple-rounded-box cms cms-user-index'>
-    <%= link_to 'School Directory', cms_schools_path %> > <%= @school_name %>
+    <%= link_to 'School Directory', cms_schools_path %> > <%= @school_info['Name'] %>
     <br /><br />
-    <h2><%= @school_name %></h2>
+    <h2><%= @school_info['Name'] %></h2>
     <br /><br />
     <table class='table table-stripe table-hover-row cms-user-index-table'>
       <thead>
@@ -18,7 +18,7 @@
         <% @teacher_data.each do |teacher| %>
           <tr>
             <% teacher.values[0...-2].each do |value| %>
-              <td><%= value %></td>
+              <td><%= value || 'N/A' %></td>
             <% end %>
             <td><%= teacher.values[-2] %></td>
             <td><%= teacher.values[-1] %></td>
@@ -26,5 +26,25 @@
         <% end %>
       </tbody>
     </table>
+    <br /><br />
+    <h2>School Subscription</h2>
+    <br />
+    <%= link_to 'TODO: Edit Subscription', '#', class: 'btn button-green' %>
+    <br />
+    <% @school_subscription_info.each do |k,v| %>
+      <br />
+      <p><strong><%= k %></strong></p>
+      <p><%= v || 'N/A' %></p>
+    <% end %>
+    <br /><br />
+    <h2>School Info</h2>
+    <br />
+    <%= link_to 'Edit School Info', edit_cms_school_path(params[:id]), class: 'btn button-green' %>
+    <br />
+    <% @school_info.each do |k,v| %>
+      <br />
+      <p><strong><%= k %></strong></p>
+      <p><%= v || 'N/A' %></p>
+    <% end %>
   </article>
 </div>
