Changed Elementary to Middle
Lessons tools page: I changed Elementary to Middle.

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -188,7 +188,7 @@
           "The kids LOVED seeing their responses come up live as we went through the lesson. Eighth-grade students were literally begging me to project their answers or asking me to allow them to resubmit an answer because they'd just gotten a better idea from another students example. An excited class learning grammar from each other, now that's a good day in ELA class! I can't wait till Friday to do it again."
         </p>
         <h4 class="q-h4 author">
-            <span>Kim Hinderlie,</span> Elma Elementary School
+            <span>Kim Hinderlie,</span> Elma Middle School
         </h4>
         <a href="https://medium.com/writing-with-quill/quill-launches-quill-lessons-fb983f2b8970#3bb3" target="_blank" class='q-button text-black'>
             <span>View My Story</span>
