Editing subscription functionality for cms schools

--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -29,7 +29,7 @@
     <br /><br />
     <h2>School Subscription</h2>
     <br />
-    <%= link_to 'TODO: Edit Subscription', '#', class: 'btn button-green' %>
+    <%= link_to 'Edit Subscription', edit_subscription_cms_school_path(params[:id]), class: 'btn button-green' %>
     <br />
     <% @school_subscription_info.each do |k,v| %>
       <br />
