--- a/app/styles/components/classroom_lessons/_congratulations_modal.scss
+++ b/app/styles/components/classroom_lessons/_congratulations_modal.scss
@@ -14,15 +14,15 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 520px;
+    height: 580px;
     border-radius: 6px;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 55px 50px 50px;
     z-index: 100;
+    width: 550px;
     .exit {
       right: 12px;
       top: 12px;
@@ -33,6 +33,7 @@
       height: 110px;
       margin-bottom: 20px;
       width: 187px;
+      margin-top: 55px;
     }
     .dividing-line {
       width: 109px;
@@ -67,6 +68,54 @@
       cursor: pointer;
       &:focus {
         outline: none;
+      }
+    }
+    .feedback, .feedback-response {
+        background-color: #fafafa;
+        margin-top: 20px;
+        box-shadow: 0 1px 2px 0 #e9e9e9;
+        border-bottom-right-radius: 6px;
+        border-bottom-left-radius: 6px;
+        border-top: solid 1px #e9e9e9;
+        width: 100%;
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+      p:first-of-type {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+      p:last-of-type {
+        margin-top: 0px;
+        font-size: 12px;
+        color: #929292;
+      }
+      .emoji-row {
+        display: flex;
+        justify-content: space-between;
+        width: 300px;
+        img {
+          background-color: white;
+          display: inline-block;
+          border-radius: 30px;
+          box-shadow: 0 2px 4px 0 #e9e9e9;
+          padding: 5px;
+          cursor: pointer;
+        }
+      }
+    }
+    .feedback-response {
+      p:first-of-type {
+        margin-top: 40px;
+      }
+      p:last-of-type {
+        width: 350px;
+        a {
+          font-weight: 600;
+          color: #027360;
+          text-decoration: underline;
+        }
       }
     }
   }
