--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -20,8 +20,8 @@
             <% teacher.values[0...-1].each do |value| %>
               <td><%= value || 'N/A' %></td>
             <% end %>
-            <td><%= teacher.values[-1] %></td>
-            <td><%= button_to 'Sign in', sign_in_cms_user_path(teacher.values[-1]), method: :put %></td>
+            <td><%= button_to 'Make Admin', make_admin_cms_user_path(teacher.values[-1]), method: :put %></td>
+            <td><%= button_to 'Sign In', sign_in_cms_user_path(teacher.values[-1]), method: :put %></td>
           </tr>
         <% end %>
       </tbody>
