--- a/app/views/cms/schools/edit.html.erb
+++ b/app/views/cms/schools/edit.html.erb
@@ -5,7 +5,14 @@
     <h2>Edit: <%= @school.name %></h2>
     <br />
     <p><strong>Warning: Please don't edit the school info unless you are 100% sure it needs to be changed.</strong></p>
-    <br /><br />
+    <br /><strong>Notes:
+    <ul>
+      <li>State is just initials (e.g. NY)</li>
+      <li>Private schools don't have a district.</li>
+      <li>Charter schools should have the charter network name as district.</li>
+      <li>Before adding a district, search for other schools in the same district so you can copy and paste the exact district name in the database.</li>
+      <li>Free and Reduced Price lunch is just a number (e.g. 75 &mdash; not 75%).</li>
+    </strong></ul><br />
     <%= form_for @school, url: cms_school_path(@school.id) do |f| %>
       <% @editable_attributes.each do |attribute_name, attribute_field| %>
         <div class='row'>
