--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -17,11 +17,11 @@
       <tbody>
         <% @teacher_data.each do |teacher| %>
           <tr>
-            <% teacher.values[0...-1].each do |value| %>
+            <% teacher.values[0...-2].each do |value| %>
               <td><%= value || 'N/A' %></td>
             <% end %>
-            <td><%= button_to 'Make Admin', make_admin_cms_user_path(teacher.values[-1]), method: :put %></td>
-            <td><%= button_to 'Sign In', sign_in_cms_user_path(teacher.values[-1]), method: :put %></td>
+            <td><%= teacher.values[-1] == 'admin' ? 'N/A' : (button_to 'Make Admin', make_admin_cms_user_path(teacher.values[-2]), method: :put) %></td>
+            <td><%= button_to 'Sign In', sign_in_cms_user_path(teacher.values[-2]), method: :put %></td>
           </tr>
         <% end %>
       </tbody>
