--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,9 +91,15 @@
 }
 
 @media screen and (max-width: 992px) {
-  .icon-legend .icon-wrapper {
-    margin-bottom: 30px;
-    margin-right: 30px;
+  .app-legend {
+    .icon {
+      flex-direction: column;
+      align-items: center;
+      .icons-description-wrapper {
+        margin-left: 0px;
+        margin-top: 10px;
+      }
+    }
   }
 }
 
