--- a/app/assets/stylesheets/pages/empty_progress_report.scss
+++ b/app/assets/stylesheets/pages/empty_progress_report.scss
@@ -1,9 +1,8 @@
 .empty-progress-report {
   max-width: 500px;
   width: 100%;
-  margin: auto;
+  margin: 55px auto 30px;
   text-align: center;
-  margin-top: 55px;
   h1 {
     margin: 35px 0px 20px;
     font-size: 30px;
