add tip section to info section on reset password page

--- a/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
+++ b/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
@@ -301,6 +301,7 @@
     width: 100%;
     margin-top: 30px;
     label {
+      margin-bottom: 7px;
       font-weight: normal;
       font-size: 14px;
     }
@@ -313,12 +314,14 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    font-weight: 600;
   }
   .student-info-box {
     margin-top: 41px;
-    padding: 20px 15px;
+    padding: 16px 17px;
     border-radius: 1px;
     background-color: #fcf2e1;
+    border: solid 1px rgba(245, 186, 91, 0.41);
     h4 {
       margin-top: 0px;
       font-size: 15px;
@@ -329,6 +332,25 @@
       margin-bottom: 15px;
       &.step {
         margin-bottom: 5px;
+        span {
+          font-weight: bold;
+        }
+      }
+    }
+    .dividing-line {
+      margin: 10px auto;
+      border-bottom: solid 1px #f8a724;
+    }
+    .tip {
+      display: flex;
+      i {
+        font-size: 16px;
+        padding-right: 6px;
+        color: #ea9a1a;
+        margin-top: 3px;
+        }
+      p {
+        margin-bottom: 0px;
         span {
           font-weight: bold;
         }
