--- a/app/views/password_reset/index.html.erb
+++ b/app/views/password_reset/index.html.erb
@@ -10,7 +10,7 @@
 
   <%= form_for @user, url: password_reset_index_path do |f| %>
     <%= f.label      :email, 'Email Address' %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, placeholder: 'Email Address' %>
     <%= f.button 'Reset Password', class: 'text-white bg-quillgreen' %>
   <% end %>
 
@@ -24,7 +24,11 @@
     <p class="step">1. Click on <span>“Manage Classes”</span></p>
     <p class="step">2. Click on <span>“Edit Students”</span> for the class.</p>
     <p class="step">3. Click on <span>“Edit Account"</span>.</p>
-    <p>Once your teacher resets your password, it will be your last name with the first letter capitalized.</p>
+    <div class="dividing-line"></div>
+    <div class="tip">
+      <i class="fa fa-icon fa-lightbulb-o"></i>
+      <p><span>Tip:</span> Your teacher can download and print a pdf that includes all your login information from the <span>Edit Students</span> page.</p>
+    </div>
   </div>
 
 </div>
