--- a/app/views/cms/schools/edit.html.erb
+++ b/app/views/cms/schools/edit.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <article class='simple-rounded-box cms cms-user-index'>
+  <article class='simple-rounded-box cms-container'>
     <%= link_to 'School Directory', cms_schools_path %> > <%= link_to @school.name, cms_school_path(@school.id) %> > Edit
     <br /><br />
     <h2>Edit: <%= @school.name %></h2>
