--- a/app/views/cms/schools/new.html.erb
+++ b/app/views/cms/schools/new.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <article class='simple-rounded-box cms cms-user-index'>
+  <article class='simple-rounded-box cms-container'>
     <%= link_to 'School Directory', cms_schools_path %> > New School
     <br /><br />
     <h2>New School</h2>
