--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <article class='simple-rounded-box cms cms-user-index'>
+  <article class='simple-rounded-box cms-container'>
     <%= link_to 'School Directory', cms_schools_path %> > <%= @school_info['Name'] %>
     <br /><br />
     <h2><%= @school_info['Name'] %></h2>
