--- a/app/views/cms/users/index.html.erb
+++ b/app/views/cms/users/index.html.erb
@@ -1,47 +1,39 @@
 <div class='container'>
-  <article class='simple-rounded-box cms cms-user-index'>
-    <h1>User Directory</h1>
-    <br />
-    <%= link_to 'Add New User', new_cms_user_path, class: 'btn button-green'  %>
-    <br /><br />
-    <%= form_tag search_cms_users_path, class: 'searchable' do %>
-      <table>
-        <% @text_search_inputs.each do |attribute| %>
-          <tr>
-            <td>
+  <article class='simple-rounded-box cms-container'>
+    <div class='cms-container-meta'>
+      <div class='cms-container-meta-left'>
+        <h1>User Directory</h1>
+        <%= link_to 'Add New User', new_cms_user_path, class: 'btn button-green'  %>
+      </div>
+      <%= form_tag search_cms_users_path, class: 'cms-search-form' do %>
+        <div class='cms-meta-middle'>
+          <% @text_search_inputs.each do |attribute| %>
+            <div class='cms-search-form-row'>
               <%= label_tag attribute, "#{attribute.gsub('_', ' ').titleize}" %>
-            </td>
-            <td>
               <%= text_field_tag attribute, @user_search_query[attribute] ? @user_search_query[attribute] : '' %>
-            </td>
-          </tr>
-        <% end %>
+            </div>
+          <% end %>
+        </div>
 
-        <tr>
-          <td>
+        <div class='cms-meta-right'>
+          <div class='cms-search-form-row'>
             <%= label_tag 'user_premium_status', 'Premium Status' %>
-          </td>
-          <td>
             <%= select_tag 'user_premium_status', options_for_select(@school_premium_types, @user_search_query['user_premium_status'] ? @user_search_query['user_premium_status'] : []), multiple: true %>
-          </td>
-        </tr>
+          </div>
 
-        <tr>
-          <td>
+          <div class='cms-search-form-row'>
             <%= label_tag 'user_role', 'Role' %>
-          </td>
-          <td>
             <%= select_tag 'user_role', options_for_select(@user_role_types, @user_search_query['user_role']), include_blank: true %>
-          </td>
-        </tr>
+          </div>
 
-        <tr><td colspan="2">
-          <%= submit_tag 'Search' %>
-        </td></tr>
+          <div class='cms-search-submit-row'>
+            <%= submit_tag 'Search' %>
+          </div>
+        </div>
       <% end %>
-    </table>
+    </div>
 
-    <table class='table table-stripe table-hover-row cms-user-index-table'>
+    <table class='cms-search-results-table'>
       <thead>
         <tr>
           <% # THIS ORDER MATCHES ORDER OF ATTRIBUTES IN USERS_CONTROLLER. %>
@@ -59,7 +51,7 @@
             <td><%= user.values[-3] ? (link_to user.values[-3], cms_school_path(user.values[-2])) : 'N/A' %></td>
             <td><%= link_to 'Edit', edit_cms_user_path(user.values.last) %></td>
             <td><%= link_to 'Details', cms_user_path(user.values.last) %></td>
-            <td><%= button_to 'Sign in', sign_in_cms_user_path(user.values.last), method: :put %></td>
+            <td><%= link_to 'Sign in', sign_in_cms_user_path(user.values.last), method: :put %></td>
           </tr>
         <% end %>
       </tbody>
