--- a/app/views/cms/users/show.html.erb
+++ b/app/views/cms/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <article class='simple-rounded-box cms cms-user-index'>
+  <article class='simple-rounded-box cms-container'>
     <%= link_to 'User Directory', cms_users_path %> > <%= @user.name %>
     <br /><br />
     <h2><%= @user.name %></h2>
